# ASTERIXCodec

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci-cat01.yml  ci-cat02.yml  ci-cat34.yml  ci-cat48.yml  ci-cat62.yml
cmake/: asterixConfig.cmake.in
examples/: CMakeLists.txt  simple_build.sh  test_cat002  test_cat002.cpp  test_cat034.cpp
include/ASTERIXCodec/: BitStream.hpp  Codec.hpp  SpecLoader.hpp  Types.hpp
include/asterix/: asterix.hpp
include/asterix/core/: asterix_category.hpp  asterix_decoder.hpp  asterix_message.hpp  types.hpp
include/asterix/data/: data_item.hpp  field.hpp  field_value.hpp
include/asterix/spec/: data_item_spec.hpp  field_spec.hpp  uap_spec.hpp  xml_parser.hpp
include/asterix/utils/: bit_reader.hpp  byte_buffer.hpp  exceptions.hpp
specs/: CAT01.xml  CAT02.xml  CAT34.xml  CAT48.xml  CAT62.xml  cat002_v1.1.xml  cat034_v1.1.xml
src/: Codec.cpp  SpecLoader.cpp
src/core/: asterix_category.cpp  asterix_decoder.cpp  asterix_message.cpp  types.cpp
src/data/: data_item.cpp  field.cpp  field_value.cpp
src/spec/: data_item_spec.cpp  field_spec.cpp  uap_spec.cpp  xml_parser.cpp
src/utils/: bit_reader.cpp  byte_buffer.cpp  exceptions.cpp
tests/: test_cat01.cpp  test_cat02.cpp  test_cat34.cpp  test_cat48.cpp  test_cat62.cpp
